fixed event contact spacing

--- a/master_style.css
+++ b/master_style.css
@@ -1010,7 +1010,7 @@ a>.schedule:hover {
 	}
 
 	.img-circle {
-		width:100%;
+		max-width:100%;
 		margin:auto;
 		text-align:center;
 		margin-bottom:20px;
